--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "electron-dialog-external",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "keywords": [
@@ -21,12 +21,11 @@
     "electron": "^11.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.22",
     "shx": "^0.3.3",
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "start-test": "yarn transpile && node --enable-source-maps lib/_test.js",
-    "transpile": "shx rm -rf lib/* && tsc -p ."
+    "build": "shx rm -rf lib/* && tsc -p .",
+    "_start-test": "yarn build && node --enable-source-maps lib/_test.js"
   }
 }
